# AnalysePlugin

./: .gitignore  CMakeLists.txt  README.md  changes.txt
src/: APCompat.h  AnalyseController.h  AnalyseController.mm  FindConfigDoc.h  FindConfigDoc.mm  HelpWindow.h  HelpWindow.mm  MyPlugin.h  OptionsWindow.h  OptionsWindow.mm  PatternEditorView.h  PatternEditorView.mm  PluginEntry.mm  ResultPanelView.h  ResultPanelView.mm  chardefines.h  myDebug.h  tclColor.h  tclFindResultDoc.cpp  tclPattern.cpp  tclPattern.h
tests/: run.sh  test_xml.mm
